--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="https://s3.us-east-2.amazonaws.com/boardashell/d20.png">
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <!--
